# 5dpo_ratf_2023

./: .gitignore  LICENSE  README.md
5dpo_ratf_ros_nav_conf/: CMakeLists.txt  README.md  package.xml
5dpo_ratf_ros_nav_conf/launch/drivers/sdpo_driver_imu/: run_sdpo_driver_imu.launch
5dpo_ratf_ros_nav_conf/launch/drivers/sdpo_driver_laser_2d/: run_sdpo_driver_laser_2d.launch  sdpo_driver_laser_2d.yaml
5dpo_ratf_ros_nav_conf/launch/drivers/sdpo_driver_omnijoy/: run_sdpo_driver_omnijoy_logif710.launch
5dpo_ratf_ros_nav_conf/launch/scripts/: run_drivers.launch  run_hmi.launch  run_localization.launch  wake_up_almighty_ratf.launch
cad/: Anilha.stp  Anilha_4.stp  Cam+V2.stp  Eletro_Iman_support+v1.stp  Eletro_Iman_support+v2.stp  Estrutura_robo.stp  Estrutura_robo_superior.stp  Fixed.stp  LCD_frame.stp  Modular_design.stp  Suporte_postes.stp  Suportes_laser.stp  anilhaimu.stp  chapa_v6.stp  eixo_roda.stp  full+raspberry+pi+4+upgrade+cooling.stp  pillar.stp  placa_sup_rasp.stp  suporte_bateria_FOmni.stp  suporte_camara.stp  suporte_eletroiman.stp  suporte_eletroiman_interno.stp  ydliar_X2.stp  ydlidar x4.SLDPRT
doc/sbc/: rpi4b.md
drivers/5dpo_driver_laser_2d/: CMakeLists.txt  README.md  package.xml
drivers/5dpo_driver_laser_2d/config/: sdpo_driver_laser_2d.cfg  sdpo_driver_laser_2d_RPLIDARS2.yaml  sdpo_driver_laser_2d_YDLIDARX4.yaml
drivers/5dpo_driver_laser_2d/launch/: sdpo_driver_laser_2d_RPLIDARS2.launch  sdpo_driver_laser_2d_YDLIDARX4.launch
drivers/5dpo_driver_laser_2d/src/: main.cpp
drivers/5dpo_driver_omnijoy/: CMakeLists.txt  README.md  package.xml
drivers/5dpo_driver_omnijoy/src/: main.cpp
drivers/5dpo_driver_ros_camera/: .gitignore  CMakeLists.txt  README.md  package.xml
drivers/5dpo_driver_ros_camera/config/: sdpo_driver_ros_camera.cfg  sdpo_driver_ros_camera.yaml
drivers/5dpo_driver_ros_camera/launch/: sdpo_driver_ros_camera.launch
drivers/5dpo_driver_ros_camera/msg/: Aruco.msg  ArucoArray.msg
drivers/5dpo_driver_ros_camera/src/: main.cpp
drivers/5dpo_ratf_ros_driver/: CMakeLists.txt  README.md  package.xml
drivers/5dpo_ratf_ros_driver/bag/: log_tune_batt-11.73_2023-04-25-19-03-44.bag  log_tune_batt-11.73_2023-04-25-19-03-44.csv  log_tune_batt-11.75_2023-04-25-18-58-34.bag  log_tune_batt-11.75_2023-04-25-18-58-34.csv  log_tune_batt-11.79_2023-04-25-18-47-34.bag  log_tune_batt-11.79_2023-04-25-18-47-34.csv
drivers/5dpo_ratf_ros_driver/launch/: sdpo_ratf_ros_driver.launch  sdpo_ratf_ros_driver_tune.launch
drivers/5dpo_ratf_ros_driver/scripts/: bag_to_csv.py
drivers/5dpo_ratf_ros_driver/sh/: auto_tunning_motion.sh  set_robot_pwm.sh
drivers/5dpo_ratf_ros_driver/src/: main.cpp  tune.cpp
drivers/5dpo_ratf_ros_driver/srv/: SetMotorsPWM.srv
drivers/5dpo_ros_interfaces/: .gitignore  README.md
drivers/5dpo_ros_interfaces/5dpo_ros_interfaces_hw/: CMakeLists.txt  README.md  package.xml
drivers/5dpo_ros_serial_port/: CMakeLists.txt  README.md  package.xml
drivers/5dpo_ros_serial_port/src/: AsyncSerial.cpp
drivers/MPU9255_for_5dpo/: CMakeLists.txt
drivers/MPU9255_for_5dpo/calib_matrix/: matrix_mag.yaml
drivers/MPU9255_for_5dpo/launch/: calibrated_imu.launch
drivers/MPU9255_for_5dpo/src/: MPU9255_node.cpp
drivers/ros-sensor_msgs_ext/: .gitignore
drivers/serial_communication_channels/: CMakeLists.txt  README.md  package.xml
drivers/serial_communication_channels/src/: serial_communication_channels.c
firmware/5dpo_ratf_firmware/: README.md  platformio.ini
firmware/5dpo_ratf_firmware/include/: CtrlPID.h  Encoder.h  Motor.h  Robot.h  robotconfig.h
firmware/5dpo_ratf_firmware/src/: CtrlPID.cpp  Encoder.cpp  Motor.cpp  Robot.cpp  main.cpp
hmi/5dpo_ratf_ros_gui/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
hmi/5dpo_ratf_ros_gui/config/: map.yaml  track.yaml
hmi/5dpo_ratf_ros_gui/include/: markers.h  ratfPanel.hpp
hmi/5dpo_ratf_ros_gui/launch/: configuration.rviz  run.launch
hmi/5dpo_ratf_ros_gui/msg/: boxes_info.msg
hmi/5dpo_ratf_ros_gui/src/: main.cpp  markers.cpp  ratfPanel.cpp
hmi/5dpo_ratf_ros_gui/ui/: ratf_panel.ui
localization/5dpo_ratf_ros_localization/: CMakeLists.txt  README.md  package.xml
localization/5dpo_ratf_ros_localization/config/: sdpo_ratf_ros_localization.cfg  sdpo_ratf_ros_localization.yaml
localization/5dpo_ratf_ros_localization/launch/: sdpo_ratf_ros_localization.launch
localization/5dpo_ratf_ros_localization/src/: main.cpp
navigation/5dpo_ratf_ros_path_planning/: CMakeLists.txt  README.md  package.xml
navigation/5dpo_ratf_ros_path_planning/config/: map.yaml  pid.yaml  udp_server.yaml
navigation/5dpo_ratf_ros_path_planning/include/: Graph.h  Location.cpp  Location.h  Manager.cpp  Manager.h  MutablePriorityQueue.h  Pid.cpp  Pid.h  Robot.cpp  Robot.h  path_planning.h  udpClient.cpp  udpClient.h
navigation/5dpo_ratf_ros_path_planning/launch/: path_planning.launch
navigation/5dpo_ratf_ros_path_planning/src/: path_planning.cpp
paper/diagrams/: drawio.xml
paper/latex/: main.tex  references.bib
paper/latex/tables/: encoders.tex  results.tex
(+71 files in other folders)
